tests/neg-custom-args/captures/mut-iterator.check
-- Error: tests/neg-custom-args/captures/mut-iterator.scala:9:17 -------------------------------------------------------
9 |    def next() = f(Iterator.this.next()) // error
  |                 ^
  |                 Read-only method next accesses exclusive capability `f`;
  |                 method next should be declared an update method to allow this.
-- Error: tests/neg-custom-args/captures/mut-iterator.scala:17:14 ------------------------------------------------------
17 |      current = xs1 // error
   |      ^^^^^^^^^^^^^
   |      Cannot assign to field current of this
   |      since the access is in method next, which is not an update method.
-- Error: tests/neg-custom-args/captures/mut-iterator.scala:22:15 ------------------------------------------------------
22 |  def next() = f(it.next()) // error
   |               ^
   |               Read-only method next accesses exclusive capability `f`;
   |               method next should be declared an update method to allow this.
